# DentFlow

./: .env.example  .gitignore  ARCHITECTURE_AUDIT.md  AUDIT_READINESS.md  DOCS_VS_CODE_AUDIT.md  Makefile  P0-08A4C1-matrix.md  P0-08A4C2-matrix.md  P0-08A4C3-matrix.md  PATCH_MANIFEST.md  README.md  SYNC_NOTES.md  pyproject.toml  restart_bots.ps1  run_polling.cmd
app/: main.py  projector_worker.py  reminder_worker.py  reminder_worker_status.py  worker.py
booking_docs/: 00_booking_readme.md  10_booking_flow_dental.md  20_booking_domain_model.md  30_booking_routing_and_slot_ranking.md  40_booking_state_machine.md  50_booking_telegram_ui_contract.md  60_booking_integrations_and_ops.md  90_booking_mvp_plan.md  booking_api_contracts.md  booking_db_schema.md  booking_test_scenarios.md
docs/: 10_architecture.md  12_repo_structure_and_code_map.md  15_ui_ux_and_product_rules.md  16-1_card_profiles.md  16-2_card_callback_contract.md  16-3_card_media_and_navigation_rules.md  16-4_booking_card_profile.md  16-5_card_runtime_state_and_redis_rules.md  16_unified_card_system.md  17_localization_and_i18n.md  18_development_rules_and_baseline.md  20_domain_model.md  22_access_and_identity_model.md  23_policy_and_configuration_model.md  25_state_machines.md  30_data_model.md  35_event_catalog.md  40_search_model.md  50_analytics_and_owner_metrics.md  60_care_commerce.md  65_document_templates_and_043_mapping.md  68_admin_reception_workdesk.md  69_google_calendar_schedule_projection.md  70_bot_flows.md  71_role_scenarios_and_acceptance.md  72_admin_doctor_owner_ui_contracts.md  (+21 more)
(+620 files in other folders)
