[project]
name = "dentflow"
version = "0.1.0"
description = "DentFlow runtime foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7,<4.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "redis>=5.0,<6.0",
  "google-api-python-client>=2.170,<3.0",
  "google-auth>=2.37,<3.0",
  "tzdata>=2024.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
